force-app/main/default/objects/SalesPlanning__c/SalesPlanning__c.object-meta.xml
<CustomObject>
    <description>[a17][SalesPlanning__c] Planejamento de vendas definido a partir da cota do vendedor para suas contas.</description>
    <label>Planejamento de Vendas</label>
    <nameField>
        <displayFormat>Plan. {0000000}</displayFormat>
        <label>Nome de Planejamento de Vendas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planejamentos de Vendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>