force-app/main/default/objects/SalesPlanning__c/fields/AccountAreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAreaSalesLkp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Área de vendas</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>