force-app/main/default/objects/SalesPlanning__c/fields/AccountCityTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountCityTxt__c</fullName>
    <label>Cidade da Conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>