force-app/main/default/objects/SalesPlanning__c/fields/AccountPostalCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountPostalCodeTxt__c</fullName>
    <label>CEP da Conta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>