force-app/main/default/objects/SalesPlanning__c/fields/AccountTxt__c.field-meta.xml
<CustomField>
    <fullName>AccountTxt__c</fullName>
    <label>Conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>