force-app/main/default/objects/SalesPlanning__c/fields/CampaignLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>