force-app/main/default/objects/SalesPlanning__c/fields/ChannelPVCTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelPVCTxt__c</fullName>
    <label>Canal PVC</label>
    <length>12</length>
    <type>Text</type>
</CustomField>