force-app/main/default/objects/SalesPlanning__c/fields/CodeCustomerTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeCustomerTxt__c</fullName>
    <label>Código da Conta</label>
    <length>12</length>
    <type>Text</type>
</CustomField>