force-app/main/default/objects/SalesPlanning__c/fields/CurrentDateFml__c.field-meta.xml
<CustomField>
    <fullName>CurrentDateFml__c</fullName>
    <formula>DATE(VALUE(TEXT(CurrentYearTxt__c)),
VALUE(TEXT(CurrentMonthTxt__c))
,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Vigência</label>
    <type>Date</type>
</CustomField>