force-app/main/default/objects/SalesPlanning__c/fields/CustomerLossReasonTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomerLossReasonTxt__c</fullName>
    <label>Motivo de Perda do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem obra em andamento</fullName>
            </value>
            <value>
                <fullName>Cliente compra por outra razão social</fullName>
            </value>
            <value>
                <fullName>Atendimento por telefone</fullName>
            </value>
            <value>
                <fullName>Complemento de pedido</fullName>
            </value>
            <value>
                <fullName>Cliente solicitou alteração dias de visita</fullName>
            </value>
            <value>
                <fullName>Agendamento errado</fullName>
            </value>
            <value>
                <fullName>Em negociação/aguardar próxima visita</fullName>
            </value>
            <value>
                <fullName>Cliente exclusivo do concorrente</fullName>
            </value>
            <value>
                <fullName>Férias</fullName>
            </value>
            <value>
                <fullName>Sem ferramentas de trabalho</fullName>
            </value>
            <value>
                <fullName>Cliente remarcou visita</fullName>
            </value>
            <value>
                <fullName>Problemas de saúde</fullName>
            </value>
            <value>
                <fullName>Inadimplente</fullName>
            </value>
            <value>
                <fullName>Cliente fechado</fullName>
            </value>
            <value>
                <fullName>Compra do atacado</fullName>
            </value>
            <value>
                <fullName>Comprador ausente</fullName>
            </value>
            <value>
                <fullName>Preço do concorrente</fullName>
            </value>
            <value>
                <fullName>Trabalha apenas com Low Price</fullName>
            </value>
            <value>
                <fullName>Cliente com estoque alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>