force-app/main/default/objects/SalesPlanning__c/fields/FidelityTxt__c.field-meta.xml
<CustomField>
    <fullName>FidelityTxt__c</fullName>
    <label>Fidelidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>