force-app/main/default/objects/SalesPlanning__c/fields/GuestLkp__c.field-meta.xml
<CustomField>
    <fullName>GuestLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convidado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>