force-app/main/default/objects/SalesPlanning__c/fields/Priority1Txt__c.field-meta.xml
<CustomField>
    <fullName>Priority1Txt__c</fullName>
    <label>Prioridade 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administração das Vendas</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>IE - Pregão</fullName>
            </value>
            <value>
                <fullName>IE - Licitação</fullName>
            </value>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Prospecção de Conquista</fullName>
            </value>
            <value>
                <fullName>Prospecção de Concorrente</fullName>
            </value>
            <value>
                <fullName>Treinamento/Palestra</fullName>
            </value>
            <value>
                <fullName>Treinamento/Palestra Balconistas e Instaladores</fullName>
            </value>
            <value>
                <fullName>Treinamento/Palestra em Escritório CTD</fullName>
            </value>
            <value>
                <fullName>Treinamento/Palestra em Obra CTD</fullName>
            </value>
            <value>
                <fullName>Venda/Negociação</fullName>
            </value>
            <value>
                <fullName>Visita de Conversão</fullName>
            </value>
            <value>
                <fullName>Visita de Especificação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>