force-app/main/default/objects/SalesPlanning__c/fields/QuotaLkp__c.field-meta.xml
<CustomField>
    <fullName>QuotaLkp__c</fullName>
    <label>Cota</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Planejamentos de Vendas</relationshipLabel>
    <relationshipName>Planejamentos_de_Vendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>