force-app/main/default/objects/SalesPlanning__c/fields/RevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>RevenueNmb__c</fullName>
    <label>Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>