force-app/main/default/objects/SalesPlanning__c/fields/TotalValueNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalValueNmb__c</fullName>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>