force-app/main/default/objects/SalesPlanning__c/fields/TradeMktActionTxt__c.field-meta.xml
<CustomField>
    <fullName>TradeMktActionTxt__c</fullName>
    <label>Ação Trade Mkt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antecipação Trimestre</fullName>
            </value>
            <value>
                <fullName>Aumento Ticket Médio</fullName>
            </value>
            <value>
                <fullName>Clientes Mistos</fullName>
            </value>
            <value>
                <fullName>Combo Promo Peq. Varejo</fullName>
            </value>
            <value>
                <fullName>Desloca Low Price</fullName>
            </value>
            <value>
                <fullName>Pontual Produto</fullName>
            </value>
            <value>
                <fullName>Ticket Médio</fullName>
            </value>
            <value>
                <fullName>Top Amanco</fullName>
            </value>
            <value>
                <fullName>Xeque Mate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>