force-app/main/default/objects/SalesPlanning__c/fields/VisitDateDte__c.field-meta.xml
<CustomField>
    <fullName>VisitDateDte__c</fullName>
    <label>Data de Visita (Test)</label>
    <type>DateTime</type>
</CustomField>