force-app/main/default/objects/SalesPlanning__c/validationRules/NullValue.validationRule-meta.xml
<ValidationRule>
    <fullName>NullValue</fullName>
    <active>false</active>
    <description>Impede a criação de um Planejamento de Vendas com valor zerado ou nulo.</description>
    <errorConditionFormula>TotalValueNmb__c = 0 || TotalValueNmb__c = NULL</errorConditionFormula>
    <errorMessage>Insira um valor para os todos os planejamentos de venda.</errorMessage>
</ValidationRule>